# quanta

./: CHANGELOG.md  LICENSE  nea-funclang.cabal  quanta.cabal
src/: Parser.hs  QntSyn.hs
src/QntSyn/: DepAnal.hs  Infer.hs  Output.hs  Parser.hs
