cabal-version:       2.0
name:                quanta
version:             0.1.0.0
license-file:        LICENSE
author:              mlugg
maintainer:          mlugg@mlugg.co.uk
build-type:          Simple

executable quanta
  main-is:             Main.hs
  other-modules:       QntSyn, QntSyn.Parser, QntSyn.Infer, QntSyn.Output, QntSyn.DepAnal
  build-depends:       base ^>=4.13.0.0, mtl, megaparsec, parser-combinators, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
